# steward

./: .dockerignore  .env.example  .gitignore  AGENTIC_SRE_PLAN.md  ASSUMPTIONS.md  DEPLOY.md  DEVLOG.md  Dockerfile  LICENSE  MORNING_SUMMARY.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/steward/: __main__.py  config.py  demo.py  diffing.py  escalate.py  incidents.py  logbuf.py  models.py  netutil.py  notify.py  runtime.py
backend/steward/actions/: __init__.py  executor.py  planner.py
backend/steward/api/: __init__.py  app.py  schemas.py
backend/steward/balancer/: __init__.py  policy.py
backend/steward/checks/: __init__.py  probes.py  schema.py
backend/steward/llm/: __init__.py  client.py  prompts.py  service.py
backend/steward/proxmox/: __init__.py  base.py  factory.py  fixtures.py  mock.py  real.py
backend/steward/rules/: __init__.py  builtins.py  engine.py  predict.py
backend/steward/store/: __init__.py  db.py
backend/tests/: conftest.py  test_api.py  test_api_extra.py  test_balancer.py  test_diffing.py  test_escalation.py  test_examples.py  test_guardrails.py  test_incidents.py  test_llm.py  test_predict.py  test_probes.py  test_rules.py  test_runtime.py  test_simulator.py  test_store.py
deploy/: steward.service
examples/: README.md  escalation_receiver.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  util.js
frontend/src/components/: Actions.jsx  Balance.jsx  Changes.jsx  Chat.jsx  Checks.jsx  Dashboard.jsx  Events.jsx  Header.jsx  Logs.jsx  NodeChart.jsx
scripts/: check_secrets.sh  install-hooks.sh
